manifests/authentik/authentik/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: authentik-ingress
  namespace: authentik
  annotations:
    traefik.ingress.kubernetes.io/router.entrypoints: websecure
    traefik.ingress.kubernetes.io/service.scheme: http
spec:
  tls:
    - hosts:
        - auth.tanksrop.xyz
      secretName: tanksrop.xyz
  rules:
    - host: auth.tanksrop.xyz
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: authentik-server
                port:
                  number: 80
